--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <div class="logo">Header Logo</div>
             <div class="nav">
                 <ul>
-                    <li><a href="./index.html" noopener noreferrer>header link one</li></a> 
-                    <li><a href="./index.html" noopener noreferrer>header link two</a></li>
-                    <li><a href="./index.html" noopener noreferrer>header link three</a></li>
+                    <li><a href="./index.html" noopener noreferrer>link one</li></a> 
+                    <li><a href="./index.html" noopener noreferrer>link two</a></li>
+                    <li><a href="./index.html" noopener noreferrer>link three</a></li>
                 </ul>
             </div>
         </div>
